Lots of copy changes

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,26 +3,42 @@
 {% block body %}
     <div id="about">
 
-        <h1>Sending a CV is usually the very
-            first step of a job application &hellip; 
-            except for MPs!
-        </h1>
+        <h2>Why should candidates share their CV?</h2>
 
-        <p class="lead">Democracy Club's CV project is getting every candidate
-        for Parliament to share their CV for the voting public.
+        <p>Sending a CV is usually the very first step of a job application.
         </p>
 
-        <blockquote>&ldquo;To apply, please send your Curriculum Vitae.&rdquo;</blockquote>
+        <p>We believe it should also be the first step when people apply to become an MP.</p>
 
-        <p class="lead">Their future employers (you and me!) can then look at
-        the CVs, and assess their skills and abilities before choosing who
-        is best.
+        <p>Voters can then look at the CVs, and assess skills and
+        abilities before choosing who is best.
         </p>
 
         <h2>What can I do here?</h2>
 
         <p>You can browse the CVs we've already got, and
         ask your candidates to upload missing ones.
+        </p>
+
+        <h2>Why should candidates do this?</h2>
+
+        <p>To be helpful to voters, so they can choose the best candidate.
+        </p>
+
+        <p>Or have a look at newspaper articles on the topic:
+        </p>
+        
+        <ul>
+            <li><a href="http://www.theguardian.com/politics/2015/feb/28/ethics-chief-tell-voters-about-your-second-jobs-general-election-lord-bew-malcolm-rifkind-jack-straw">MP ethics chief: tell voters about your second jobs</a></li>
+            <li><a href="http://news.bbc.co.uk/1/hi/uk_politics/8583859.stm">MP hopefuls urged to declare interests</a></li>
+        </ul>
+
+        <h2>What's the long term aim?</h2>
+
+        <p>Ultimately, we'd like the public to be more involved in the
+        recruitment of MPs in lots of ways. Perhaps we can increase the
+        quality, giving Prime Ministers more choice of high calibre people for
+        senior roles.
         </p>
 
         <h2>Who's behind this site?</h2>
@@ -33,38 +49,24 @@
         provide support and infrastructure.
         </p>
 
-        <h2>Is there a legal requirement?</h2>
+        <h2>How can I help?</h2>
 
-        <p>It was a recommendation in Sir Christopher Kelly's Committee on
-        Standards in Public Life that all candidates "should publish, at
-        nomination, a register of interests including the existence of other
-        paid jobs and whether they intend to continue to hold them, if
-        elected". 
+        <p>If you'd like to help market this site, or handle customer support,
+        <a href="mailto:cv@democracyclub.org.uk">email us</a>.
         </p>
 
-        <p>Not quite a CV. We think a full CV will cover some of that, and
-        also give useful background on education, job history and skills.
-        The recommendation was followed up by 
-        <a href="http://news.bbc.co.uk/1/hi/uk_politics/8583859.stm">government guidance</a>.
-        </p>
-
-
-        <h2>Candidates send their CV to their party already!</h2>
-
-        <p>Quite often, yes. This is good evidence that they <i>have</i>
-        a CV. It isn't enough &mdash; MPs work for you, not
-        for their party.
-        </p>
-
-        <h2>What's the long term aim?</h2>
-
-        <p>Ultimately, we'd like the public to be more involved in the
-        recruitment of MPs in lots of ways. Perhaps we can increase the
-        quality, giving Prime Ministers more choice of high calibre people for
-        senior roles.
+        <p>If you're a programmer, or you like reporting bugs in software,
+        help out on our <a href="https://github.com/frabcus/mpcv">Github repostitory</a>.
         </p>
 
 
     </div>
 {% endblock %}
 
+{% block sidebar %}
+    <h2>Contact us</h2>
+    <p class="lead">You can email <a href="mailto:cv@democracyclub.org.uk">cv@democracyclub.org.uk</a>
+
+    <h2>Source code</h2>
+    <p class="lead"> <a href="https://github.com/frabcus/mpcv">Github repostitory</a></p>
+{% endblock  %}
