--- a/templates/index.html
+++ b/templates/index.html
@@ -3,15 +3,10 @@
 {% block body %}
     <div id="front">
 
-        <!-- <h1>&ldquo;To apply, please send your CV.&rdquo;</h1>
-
-        <h2>Unless you want to be an MP&hellip; Until now!</h2>
-        -->
-
-        <h1>Candidates, share your CV!</h1>
-
-        <p class="lead">This site makes it easy for MP candidates to increase
-        trust in politics, by sharing their CV with voters.</p>
+        <h1>Before you vote, look at their CVs!</h1>
+            
+        <p class="lead">This site helps MP candidates share their CV with voters.
+        </p>
 
 
         <p class="lead">
@@ -27,7 +22,6 @@
               <button type="submit" class="btn btn-primary">View candidates</button>
             </div>
         </form>
-
 
     </div>
 
