--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,8 +15,12 @@
             <div class="navbar-header">
               <a href="../" class="navbar-brand">
                   <img src="/static/dc_logo.png">
-                  Democracy Club CV
+                  Democracy Club CVs
               </a>
+
+              <p class="navbar-text">
+                   Curriculum Vitae of future Members of Parliament
+              </p>
 
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-main">
                      <span class="sr-only">Toggle navigation</span>
@@ -61,20 +65,6 @@
           </div>
 
           <footer>
-            <div class="row">
-              <div class="col-lg-12">
-
-                <!-- <ul class="pull-right">
-                  <li><a href="http://democracyclub.org.uk/">Democracy Club</a></li>
-                  <li><a href="http://yournextmp.com/">Your Next MP</a></li>
-                </ul> -->
-
-                <ul class="list-unstyled">
-                  <li><a href="https://github.com/frabcus/mpcv">Source</a></li>
-                  <li><a href="mailto:francis@flourish.org">Contact</a></li>
-                </ul>
-              </div>
-            </div>
 
             {% if g.debug_email %}
                 <div class="text-center alert alert-info" style="margin-top: 1em;">
