--- a/templates/email_candidate.html
+++ b/templates/email_candidate.html
@@ -16,7 +16,7 @@
             <div class="form-group">
               <label for="from_email" class="col-sm-2 control-label">From</label>
               <div class="col-sm-10">
-                  <input id="from_email" name="from_email" type="mooemail" value="{{from_email}}" placeholder="Your email" class="form-control" autofocus>
+                  <input id="from_email" name="from_email" type="mooemail" value="{{from_email}}" placeholder="Your email" class="form-control" {% if not from_email %}autofocus{% endif %}>
               </div>
             </div>
 
@@ -30,7 +30,7 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label" for="message">Message</label>
                 <div class="col-sm-10">
-                    <textarea id="message" name="message" class="form-control" rows=10>{{ message  }}</textarea>
+                    <textarea id="message" name="message" class="form-control" rows=10 autofocus>{{ message  }}</textarea>
                     <p class="help-block">Want some ideas for your letter? See the top tips to the right/below.</p>
                 </div>
             </div>
