--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
         <div class="navbar navbar-default navbar-fixed-top">
           <div class="container">
             <div class="navbar-header">
-              <a href="../" class="navbar-brand">
+              <a href="/" class="navbar-brand">
                   <img src="/static/dc_logo.png">
                   Democracy Club CVs
               </a>
