--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,21 +18,25 @@
                   Democracy Club CVs
               </a>
 
-              <p class="navbar-text">
-                   Curriculum Vitae of future Members of Parliament
-              </p>
-
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-main">
-                     <span class="sr-only">Toggle navigation</span>
-                     <span class="icon-bar"></span>
-                     <span class="icon-bar"></span>
-                     <span class="icon-bar"></span>
-                   </button>
+                 <span class="sr-only">Toggle navigation</span>
+                 <span class="icon-bar"></span>
+                 <span class="icon-bar"></span>
+                 <span class="icon-bar"></span>
+               </button>
             </div>
             <div class="navbar-collapse collapse" id="navbar-main">
               <!-- <ul class="nav navbar-nav">
                 <li> <a href="/clear_postcode">Change constituency</a> </li>
               </ul> -->
+
+              <p class="navbar-text visible-lg-block visible-md-block hidden-sm hidden-xs">
+                  Curriculum Vitae of future Members of Parliament
+              </p>
+              <p class="navbar-text hidden-lg hidden-md visible-sm-block visible-xs-block">
+                  CVs of MPs
+              </p>
+
 
               <ul class="nav navbar-nav navbar-right">
                 <li> <a href="/clear_postcode">Change constituency</a> </li>
