--- a/templates/layout.html
+++ b/templates/layout.html
@@ -50,7 +50,7 @@
         <div class="container">
 
           <div class="row">
-            <div class="col-md-8 col-lg-7">
+            <div class="col-xs-12">
                 {% with messages = get_flashed_messages(with_categories=true) %}
                   {% if messages %}
                     {% for category, message in messages %}
@@ -58,7 +58,11 @@
                     {% endfor %}
                   {% endif %}
                 {% endwith %}
+            </div>
+          </div>
 
+          <div class="row">
+            <div class="col-md-8 col-lg-7">
                 <div class="contentwrap"> {% block body %}{% endblock %} </div>
             </div>
             <div class="col-md-1 col-lg-1">
