--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,9 +3,12 @@
     <head>
         <title>{% block title %}{% endblock %} - Democracy Club CV</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="/static/bootstrap/css/bootswatch.min.css" rel="stylesheet">
         <link href="/static/style.css" rel="stylesheet">
+
+        <link rel="icon" type="image/png" href="/static/dc_logo.png">
 
     </head>
 
