Load all scripts at top so they work
In particular, jquery-fileupload is very sensitive that it loads
after jquery. It may be slow having them all in the <head>, but
at least it will work.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,6 +8,12 @@
         <link href="/static/bootstrap/css/bootswatch.min.css" rel="stylesheet">
         <link href="/static/style.css" rel="stylesheet">
 
+        <script src="/static/jquery-1.11.2.min.js"></script>
+        <script src="/static/bootstrap/js/bootstrap.min.js"></script>
+        <script src="/static/jquery.ui.widget.js"></script>
+        <script src="/static/jquery.iframe-transport.js"></script>
+        <script src="/static/jquery.fileupload.js"></script>
+
         <link rel="icon" type="image/png" href="/static/dc_logo.png">
 
     </head>
@@ -86,8 +92,6 @@
           </footer>
 
         </div>
-        <script src="/static/jquery-1.11.2.min.js"></script>
-        <script src="/static/bootstrap/js/bootstrap.min.js"></script>
     </body>
 
 </html>
