--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,12 @@
+/* Navigation header */
+
+.navbar-brand > img {
+    position:relative;
+    top:-20px;
+    padding-right:1em;
+    float:left;
+} 
+
 /* / */
 
 #front .lead {
@@ -27,6 +36,16 @@ footer ul.pull-right li:last-child {
 
 .top-alert + * {
     padding-top: 0px;
+}
+
+/* See http://stackoverflow.com/a/12121929/284340 */
+.frame_small_outer   {width:45%;height:100%;background:#CCC; display: inline-block; margin: 4px; }
+.frame_small_inner        {position:relative;}
+.frame_small_inner .ratio {display:block;width:100%;height:auto;}
+.frame_small_inner iframe {position:absolute;top:0;left:0;width:100%; height:100%;}
+
+#front h2 {
+    margin-bottom: 32px;
 }
 
 
@@ -92,24 +111,8 @@ footer ul.pull-right li:last-child {
 
 /* See http://stackoverflow.com/a/12121929/284340 */
 html,body        {height:100%;}
-.frame_outer_wrapper   {width:100%;height:100%;margin:0 auto;background:#CCC}
+.frame_outer_wrapper   {width:100%;height:100%;margin:0 auto;background:#CCC;margin-top: 48px;}
 .frame_inner_wrapper        {position:relative;}
 .frame_inner_wrapper .ratio {display:block;width:100%;height:auto;}
 .frame_inner_wrapper iframe {position:absolute;top:0;left:0;width:100%; height:100%;}
-
-.frame_outer_wrapper {
-    margin-top: 48px;
-}
-
-.uploaded {
-    text-color: #aaa;
-}
-
-
-.navbar-brand > img {
-    position:relative;
-    top:-20px;
-    padding-right:1em;
-    float:left;
-} 
 
