--- a/templates/about.html
+++ b/templates/about.html
@@ -46,7 +46,7 @@
         <p>It was first made by <a href="http://flourish.org/">Francis Irving</a>.
         He built a large part of the original TheyWorkForYou, back in the day.
         The flotilla of people at <a href="https://democracyclub.org.uk/about/">Democracy Club</a>
-        provide support and infrastructure.
+        help maintain it, and provide infrastructure.
         </p>
 
         <h2>How can I help?</h2>
