Make recently added CVs span whole page

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -80,6 +80,11 @@
                 <div class="sidebarwrap"> {% block sidebar %}{% endblock %} </div>
             </div>
           </div>
+          <div class="row">
+            <div class="col-xs-12">
+                <div class="widebelowwrap"> {% block widebelow %}{% endblock %} </div>
+            </div>
+          </div>
 
           <footer>
 
