Move Javascript into own file, add Selenium tests
Tests don't work full yet

--- a/templates/upload_cv.html
+++ b/templates/upload_cv.html
@@ -9,7 +9,7 @@
 
         <form action="/upload_cv/{{ candidate.id }}" method="POST">
             <div class="form-group">
-              <button type="submit" class="btn btn-primary">Confirm email</button>
+              <button id="confirm_email" type="submit" class="btn btn-primary">Confirm email</button>
             </div>
         </form>
 
