--- a/templates/index.html
+++ b/templates/index.html
@@ -8,18 +8,17 @@
         <p class="lead">This site helps MP candidates share their CV with voters.
         </p>
 
-
         <p class="lead">
             Enter your postcode.
         </p>
 
         <form action="/set_postcode" method="GET">
             <div class="form-group">
-              <input id="postcode" name="postcode" placeholder="Postcode" class="form-control" autofocus>
+              <input id="postcode" name="postcode" placeholder="Postcode" class="input-lg form-control" autofocus>
             </div>
 
             <div class="form-group">
-              <button type="submit" class="btn btn-primary">View candidates</button>
+              <button type="submit" class="btn btn-lg btn-success">View candidates</button>
             </div>
         </form>
 
