--- a/templates/upload_cv_confirmed.html
+++ b/templates/upload_cv_confirmed.html
@@ -5,7 +5,7 @@
 
         <h1>Hi, {{ candidate.name }}!</h1>
 
-        <p class="lead">Choose your CV to share with your constituents.</p>
+        <p class="lead">Choose your CV to share.</p>
 
         <form id="form" method="POST" enctype="multipart/form-data" action="{{ upload_link}}">
           <a class="btn-file btn btn-lg btn-success">
