--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,7 @@
                             <iframe src="http://docs.google.com/viewer?url={{ cv.url | urlencode}}&embedded=true" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
+                    <div class="link"><a href="/show_cv/{{ cv.person_id }}">View full page</a></div>
                 </div>
             {% endfor %}
         </div>
