--- a/templates/check_email.html
+++ b/templates/check_email.html
@@ -8,9 +8,17 @@
                 We've sent you a link. Please click it, then upload your CV.
         </p>
 
-        <p>It can sometimes take a while for emails to arrive. Please be patient, and
-        check your spam folder.
+
+        <p>We sent the email to <strong>{{ candidate.email }}</strong>.
+        It sometimes takes a while to arrive. Please be patient, and
+        check your spam folder. 
         </p>
+        
+        <p>Thanks for doing this &mdash; this check is important, so we know
+        it's your CV.
+        </p>
+
+
 
 {% endblock %}
 
