--- a/templates/index.html
+++ b/templates/index.html
@@ -38,10 +38,10 @@
                     <div class="frame_small_outer">
                         <div class="frame_small_inner">
                             <img class="ratio" src="/static/transparent.gif"/>
-                            <iframe src="http://docs.google.com/viewer?url={{ cv.url | urlencode}}&embedded=true" frameborder="0" allowfullscreen></iframe>
+                            <iframe src="http://docs.google.com/viewer?url={{ cv.url | urlencode}}&amp;embedded=true" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
-                    <div class="link"><a href="/show_cv/{{ cv.person_id }}">View full page</a></div>
+                    <div class="link_full_page"><a href="/show_cv/{{ cv.person_id }}">View full page</a></div>
                 </div>
             {% endfor %}
         </div>
