--- a/templates/show_cv.html
+++ b/templates/show_cv.html
@@ -16,7 +16,7 @@
         <div class="frame_outer_wrapper">
             <div class="frame_inner_wrapper">
                 <img class="ratio" src="/static/transparent.gif"/>
-                <iframe id="cvframe" src="http://docs.google.com/viewer?url={{ cv.url | urlencode}}&embedded=true" frameborder="0" allowfullscreen></iframe>
+                <iframe id="cvframe" src="http://docs.google.com/viewer?url={{ cv.url | urlencode}}&amp;embedded=true" frameborder="0" allowfullscreen></iframe>
                 <!-- CV uploaded: {{ cv.date }} -->
             </div>
         </div>
