--- a/templates/upload_cv.html
+++ b/templates/upload_cv.html
@@ -5,11 +5,11 @@
 
         <h1>Hi, {{ candidate.name }}!</h1>
 
-        <p class="lead">We need to confirm your email first.</p>
+        <p class="lead">We'd love it if you would share your CV.</p>
 
         <form action="/upload_cv/{{ candidate.id }}" method="POST">
             <div class="form-group">
-              <button id="confirm_email" type="submit" class="btn btn-primary">Confirm email</button>
+              <button id="confirm_email" type="submit" class="btn btn-success btn-lg">Share my CV</button>
             </div>
         </form>
 
