--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %} {{ constituency.name }} {% endblock %}
 {% block body %}
-    <div id="candidates">
+    <div class="candidates">
 
         <h1>
             {{ constituency.name }}
@@ -30,30 +30,6 @@
         {% endif %}
 
 
-        {% if candidates_have_cv %}
-        <div class="no_cv">
-
-           <h2>View candidates with CVs</h2>
-
-           <div class="row">
-                {% for candidate in candidates_have_cv %}
-                    <div class="col-xs-12 col-sm-6 candidate">
-                        <span class="name">{{ candidate.name }}</span> &mdash; <span class="party">{{ candidate.party}}</span>
-                        <div class="frame_small_outer">
-                            <div class="frame_small_inner">
-                                <img class="ratio" src="/static/transparent.gif"/>
-                                <iframe src="http://docs.google.com/viewer?url={{ candidate.cv_url | urlencode}}&amp;embedded=true" frameborder="0" allowfullscreen></iframe>             
-                            </div>
-                        </div>
-                        <div class="link_full_page"><a href="/show_cv/{{ candidate.id }}">View full page</a></div>
-                    </div>            
-                {% endfor %}
-            </div>
-
-
-        </div>
-        {% endif %}
-
         {% if candidates_no_email %}
         <div class="no_email">
 
@@ -81,6 +57,7 @@
     </div>
 
 {% endblock %}
+
 {% block sidebar %}
 
         {% if not email_got %}
@@ -105,3 +82,35 @@
         {% endif %}
 
 {% endblock %}
+
+{% block widebelow %}
+
+    <div class="candidates">
+        {% if candidates_have_cv %}
+        <div class="no_cv">
+
+           <h2>View candidates with CVs</h2>
+
+           <div class="row">
+                {% for candidate in candidates_have_cv %}
+                    <div class="col-md-6 candidate">
+                        <span class="name">{{ candidate.name }}</span> &mdash; <span class="party">{{ candidate.party}}
+                            <a class="link_full_page_right" href="/show_cv/{{ candidate.id }}">View full page</a>
+                        </span>
+                        <div class="frame_small_outer">
+                            <div class="frame_small_inner">
+                                <img class="ratio" src="/static/transparent.gif"/>
+                                <iframe src="http://docs.google.com/viewer?url={{ candidate.cv_url | urlencode}}&amp;embedded=true" frameborder="0" allowfullscreen></iframe>             
+                            </div>
+                        </div>
+                    </div>            
+                {% endfor %}
+            </div>
+
+
+        </div>
+        {% endif %}
+        </div>
+
+{% endblock %}
+
