Return error rather than redirecting to it.
Also link to "contact us" on error page, and typo.

--- a/templates/error.html
+++ b/templates/error.html
@@ -5,6 +5,6 @@
 
     <p class="lead">Something went wrong. We're really sorry. </p>
     
-    <p>Please try again later, or contact us..</p>
+    <p>Please try again later, or <a href="mailto:cv@democracyclub.org.uk">contact us</a>.</p>
 {% endblock %}
 
