Clearer about formats

--- a/templates/upload_cv_confirmed.html
+++ b/templates/upload_cv_confirmed.html
@@ -15,7 +15,7 @@
           </a>
         </form>
 
-        <p>Any file format will work, including Word and PDF.</p>
+        <p>A Word document or a PDF is perfect! Other formats may work too.</p>
 
     </div>
 {% endblock %}
