--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -49,7 +49,7 @@
         {% if candidates %}
         <div class="no_cv">
 
-            <h2>Not shared their CV</h2>
+            <h2>These haven't shared their CV</h2>
 
             <div class="candidate_list">
                 {% for candidate in candidates %}
@@ -73,7 +73,7 @@
         {% if candidates_no_email %}
         <div class="no_email">
 
-            <h2>Not got their email</h2>
+            <h2>We don't know contact details</h2>
 
             <div class="candidate_list">
                 {% for candidate in candidates_no_email %}
